# SpadesX

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  README.md  docker-compose.yml  install.sh  snakegame.c
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md
.github/workflows/: cmake.yml
Resources/: Border_Hallway.json  Border_Hallway.toml  Border_Hallway.vxl  GameMode.lua  config.json  config.toml  level.lua
Source/: CMakeLists.txt  ColorConversion.h  Commands.c  Commands.h  Compress.c  Compress.h  Conversion.h  DataStream.c  DataStream.h  Enums.h  Events.c  Events.h  Gamemodes.c  Gamemodes.h  Main.c  Map.c  Map.h  Master.c  Master.h  PacketReceive.c  PacketReceive.h  Packets.c  Packets.h  ParseConvert.c  ParseConvert.h  Ping.c  Ping.h  Player.c  Player.h  Protocol.c  Protocol.h  Queue.c  Queue.h  ReadVXL.c  Server.c  Server.h  Structs.h  Types.h  config.json  hallway.json  (+1 more)
Source/Server/: Block.c  Block.h  CMakeLists.txt  Console.c  Console.h  Events.c  Events.h  Grenade.c  Grenade.h  IntelTent.c  IntelTent.h  Map.c  Map.h  Master.c  Master.h  Nodes.c  Nodes.h  ParseConvert.c  ParseConvert.h  Ping.c  Ping.h  Player.c  Player.h  Server.c  Server.h  ServerStartOptions.h  Staff.c  Staff.h
Source/Server/Commands/: Admin.c  Ban.c  Clin.c  CommandManager.c  CommandManager.h  Commands.h  Help.c  Intel.c  Invisible.c  Kick.c  Kill.c  Login.c  Master.c  Mute.c  PrivateMessage.c  Ratio.c  Reset.c  Say.c  Server.c  Shutdown.c  Teleport.c  Toggles.c  Unban.c  Ups.c
Source/Server/Gamemodes/: GamemodeLua.h  Gamemodes.c  Gamemodes.h
Source/Server/Gamemodes/GamemodeLua/: luaBlock.c  luaInitAPI.c  luaNoticeModule.c  luaPlayerAPI.c  luaSpadesXModule.c
Source/Server/Packets/: BlockAction.c  BlockLine.c  ChangeTeam.c  ChangeWeapon.c  CreatePlayer.c  ExistingPlayer.c  Grenade.c  Hit.c  InputData.c  IntelCapture.c  IntelDrop.c  IntelPickup.c  KillAction.c  MapChunk.c  MapStart.c  Message.c  MoveObject.c  OrientationData.c  PacketManager.c  Packets.h  PlayerLeft.c  PositionData.c  ReceivePackets.h  Restock.c  SetColor.c  SetHP.c  SetTool.c  ShortPlayerData.c  StateData.c  VersionRequestResponse.c  WeaponInput.c  WeaponReload.c  WorldUpdate.c
Source/Server/Structs/: BlockStruct.h  CommandStruct.h  EventStruct.h  GamemodeStruct.h  GrenadeStruct.h  IPStruct.h  MapStruct.h  MasterStruct.h  MovementStruct.h  MutexStruct.h  PacketStruct.h  PhysicsStruct.h  PlayerStruct.h  ProtocolStruct.h  ServerStruct.h  StartStruct.h  TimerStruct.h
Source/Util/: Alloc.c  Alloc.h  CMakeLists.txt  Compress.c  Compress.h  DataStream.c  DataStream.h  Enums.h  Functions.c  Functions.h  JSONHelpers.h  Line.c  Line.h  Log.c  Log.h  Nanos.c  Nanos.h  Notice.c  Notice.h  Physics.c  Physics.h  Queue.c  Queue.h  TOMLHelpers.h  Types.h  Uthash.h  Utlist.h  Weapon.c  Weapon.h
Source/Util/Checks/: BlockChecks.c  BlockChecks.h  PacketChecks.c  PacketChecks.h  PlayerChecks.c  PlayerChecks.h  PositionChecks.c  PositionChecks.h  TimeChecks.c  TimeChecks.h  ToolChecks.c  ToolChecks.h  VectorChecks.c  VectorChecks.h  WeaponChecks.c  WeaponChecks.h
Source/Util/MersenneTwister/: MT.c  MT.h
Test/: CMakeLists.txt  Client.c
